[gd_scene load_steps=11 format=2]

[ext_resource path="res://Bodies/Monsters/Mini_Monster_01/Mini_Monster_01.gd" type="Script" id=1]
[ext_resource path="res://Bodies/Monsters/Mini_Monster_01/Sprites/03.png" type="Texture" id=2]
[ext_resource path="res://Bodies/Monsters/Mini_Monster_01/Sprites/02.png" type="Texture" id=3]
[ext_resource path="res://Bodies/Monsters/Mini_Monster_01/Sprites/05.png" type="Texture" id=4]
[ext_resource path="res://Bodies/Monsters/Mini_Monster_01/Sprites/06.png" type="Texture" id=5]
[ext_resource path="res://Bodies/Monsters/Mini_Monster_01/Sprites/07.png" type="Texture" id=6]
[ext_resource path="res://Bodies/Monsters/Mini_Monster_01/Sprites/08.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Run",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.1012, 30.2474 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.95328, 20.4965 )

[node name="Mini_Monster_01" type="KinematicBody2D" groups=[
"Mini",
]]
z_index = 6
z_as_relative = false
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.875961, 0 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2.38394, 3.40562 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Enemy",
"Attack_Enemy",
]]
editor/display_folded = true
collision_layer = 66
collision_mask = 82

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.44756, 13.6 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 110, 0 )

[node name="RayCastReact" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 400, 0 )
collision_mask = 3

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2( 23, 30 )
enabled = true
cast_to = Vector2( 0, 35 )

[node name="Idle" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Move" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Idle" to="." method="_on_Idle_timeout"]
[connection signal="timeout" from="Move" to="." method="_on_Move_timeout"]
